# django-rest-passwordreset

./: .coverage  .gitignore  .travis.yml  CHANGELOG.md  Contributors.md  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml  publish.yml  test-mysql.yml  test-postgres.yml  test.yml  test_full.yml
django_rest_passwordreset/: __init__.py  admin.py  apps.py  controller.py  models.py  register.py  schema.py  serializers.py  signals.py  throttling.py  tokens.py  urls.py  views.py
django_rest_passwordreset/locale/fr/LC_MESSAGES/: django.mo  django.po
django_rest_passwordreset/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_rest_passwordreset/management/commands/: clear_reset_password_tokens.py  clearresetpasswodtokens.py
django_rest_passwordreset/migrations/: 0001_initial.py  0002_pk_migration.py  0003_allow_blank_and_null_fields.py  0004_alter_resetpasswordtoken_id.py  0004_alter_resetpasswordtoken_user_agent.py  0004_web_agent_as_text.py  0004_web_agent_increase_max_length.py  0005_resetpasswordtoken_created_at_index.py
django_rest_passwordreset/tests/: test_throttle.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.mo  django.po
tests/: api.py  conftest.py  django_rest_passwordreset  requirements.txt  settings.py  settings_mysql.py  settings_postgres.py  test.py  urls.py
tests/test/: helpers.py  test_auth_test_case.py  test_throttle.py  test_token_generators.py
tests/user_id_uuid_testapp/: apps.py  models.py  views.py
tests/user_id_uuid_testapp/migrations/: 0001_initial.py
tests/user_id_uuid_testapp/tests/: test_auth_test_case.py  test_setup.py
