[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "django_rest_passwordreset"


[project]
name = "django-ninja-passwordreset"
authors = [
   {name = "Christian Kreuzberger", email = "ckreuzberger@anexia-it.com"},
   {name = "Ezeudoh Tochukwu", email = "tochukwu.ezeudoh@gmail.com"},
]
dynamic = ["version", "description"]
requires-python = ">=3.6"
readme = "README.md"
home-page = "https://github.com/eadwinCode/django-ninja-passwordreset"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "Django >=2.1",
    "django-ninja-extra",
    "ninja-schema",
    "pyjwt[crypto]"
]


[project.urls]
Documentation = "https://github.com/eadwinCode/django-ninja-passwordreset"
Source = "https://github.com/eadwinCode/django-ninja-passwordreset"

[project.optional-dependencies]
test = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-django",
    "pytest-cov",
]
doc = []
